realize un cambio en destinos añadi mas informacion

--- a/destinos-1.html
+++ b/destinos-1.html
@@ -124,10 +124,10 @@
 							<img src="img/destination.jpg" class="img-fluid" alt="Chichima-miniatura">
 						</div>
 						<div class="text">
-							<h4 class="price">treking</h4>
+							<h4 class="price">Cámping</h4>
 							<a href="destinos/D-ATChichima">
 								<h3 class="text-center py-2">Atardecer de Chichima</h3>
-								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
+								<p class="text-center">Maravillate con el atardecer más hermoso que nos regala Chichima.</p>
 							</a>
 						</div>
 						<a href="img/destination.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
@@ -142,9 +142,10 @@
 						</div>
 						<div class="text">
 							<!-- <h4 class="price">$400</h4> -->
+							<h4 class="price">Aventura</h4>
 							<a href="destinos/D-AbraMalaga">
 								<h3 class="text-center py-2">Abra Malaga</h3>
-								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
+								<p class="text-center">Con una vista insuperable del nevado Verónica. Sus montañas son ideales para hacer ciclismo y largas y relajantes caminatas.</p>
 							</a>
 						</div>
 						<a href="img/mini-destinos/abra-malaga-dia/miniatura/miniatura-abra-malaga.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
@@ -159,9 +160,10 @@
 						</div>
 						<div class="text">
 							<!-- <h4 class="price">$400</h4> -->
+							<h4 class="price">Aventura</h4>
 							<a href="destinos/D-Alfamayo">
 								<h3 class="text-center py-2">Alfamayo</h3>
-								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
+								<p class="text-center">Una ruta donde se puede observar diversos paisajes. Es caracterizado por presentar diverosos climas.</p>
 							</a>
 						</div>
 						<a href="img/mini-destinos/alfamayo/miniatura/miniaturas-de-destinos.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
@@ -176,9 +178,10 @@
 						</div>
 						<div class="text">
 							<!-- <h4 class="price">$400</h4> -->
+							<h4 class="price">Cámping</h4>
 							<a href="destinos/D-AmanecerTorontoy">
 								<h3 class="text-center py-2">Amanecer en Torontoy</h3>
-								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
+								<p class="text-center">Un Alva espectacular que nos muestra este bello lugar, donde se aprecia diversos tipos de aves.</p>
 							</a>
 						</div>
 						<a href="img/mini-destinos/amanecer-en-torontoy/miniaturas/miniaturas-de-destinos-torontoy.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
@@ -193,9 +196,10 @@
 						</div>
 						<div class="text">
 							<!-- <h4 class="price">$400</h4> -->
+							<h4 class="price">Ecoturismo</h4>
 							<a href="destinos/D-Aputinya">
 								<h3 class="text-center py-2">Aputinya</h3>
-								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
+								<p class="text-center">Aprecia el paisaje y a diversidad de aves de Aputinya.</p>
 							</a>
 						</div>
 						<a href="img/mini-destinos/Aputinya/miniatura/miniaturas-de-destinos-Aputinya.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
@@ -210,9 +214,10 @@
 						</div>
 						<div class="text">
 							<!-- <h4 class="price">$400</h4> -->
+							<h4 class="price">Ecoturismo</h4>
 							<a href="destinos/D-CVillaRica">
 								<h3 class="text-center py-2">Villa Rica</h3>
-								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
+								<p class="text-center">Vive un travesía de flora y de vistas asombras de montañas hacia una hermosa catarata.</p>
 							</a>
 						</div>
 						<a href="img/mini-destinos/Catarata-Villa-Rica/Miniatura/miniaturas-de-destinos-villa-rica.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
@@ -227,9 +232,10 @@
 						</div>
 						<div class="text">
 							<!-- <h4 class="price">$400</h4> -->
+							<h4 class="price">Ecoturismo</h4>
 							<a href="destinos/D-CatartaIllapani">
 								<h3 class="text-center py-2">Illapani</h3>
-								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
+								<p class="text-center">Un gran recorrido lleno de una encantadora vegetación que nos lleva al encuentro con una majestuosa catarata.</p>
 							</a>
 						</div>
 						<a href="img/mini-destinos/Illapani/miniatura/miniaturas-de-destinos-Illapani.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
@@ -244,9 +250,10 @@
 						</div>
 						<div class="text">
 							<!-- <h4 class="price">$400</h4> -->
+							<h4 class="price">Aventura</h4>
 							<a href="destinos/D-Chaupimayo">
 								<h3 class="text-center py-2">Chaupimayo B</h3>
-								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
+								<p class="text-center">Una red de montañas y selvas vírgenes que merecen ser visitadas.</p>
 							</a>
 						</div>
 						<a href="img/mini-destinos/Chaupimayo-B/miniatura/miniaturas-de-destinos-Chaupimayo-b.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
@@ -261,9 +268,10 @@
 						</div>
 						<div class="text">
 							<!-- <h4 class="price">$400</h4> -->
+							<h4 class="price">Historico</h4>
 							<a href="destinos/D-ChincheM">
 								<h3 class="text-center py-2">Chinche Maranura</h3>
-								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
+								<p class="text-center">Admira una construcción al estilo arquitectónico colonial.</p>
 							</a>
 						</div>
 						<a href="img/mini-destinos/Chinche-Maranura/Miniatura/miniaturas-de-destinos-Chinche.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
@@ -278,9 +286,10 @@
 						</div>
 						<div class="text">
 							<!-- <h4 class="price">$400</h4> -->
+							<h4 class="price">Vivencial</h4>
 							<a href="destinos/D-Echarati">
 								<h3 class="text-center py-2">Echarati</h3>
-								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
+								<p class="text-center">Un espectacular pueblo que esta al cuidado de una gran montaña.</p>
 							</a>
 						</div>
 						<a href="img/mini-destinos/Echarati/Miniatura/miniaturas-de-destinos-echarati.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
@@ -295,9 +304,10 @@
 						</div>
 						<div class="text">
 							<!-- <h4 class="price">$400</h4> -->
+							<h4 class="price">Ecoturismo</h4>
 							<a href="destinos/D-ForestacionChichima">
 								<h3 class="text-center py-2">Forestación Chichima</h3>
-								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
+								<p class="text-center">Ven y aprecia este gran bosque de pinos.</p>
 							</a>
 						</div>
 						<a href="img/mini-destinos/Forestación-Chichima/miniatura/miniaturas-de-destinos-chichima.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
@@ -312,9 +322,10 @@
 						</div>
 						<div class="text">
 							<!-- <h4 class="price">$400</h4> -->
+							<h4 class="price">Ecoturismo</h4>
 							<a href="destinos/D-Huayllayoc">
 								<h3 class="text-center py-2">huayllayoc</h3>
-								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
+								<p class="text-center">Realiza un recorrido por zonas fe hermosos cultivos hacia la catarata de Huayllayoc.</p>
 							</a>
 						</div>
 						<a href="img/mini-destinos/huayllayoc/Miniatura/miniaturas-de-destinos-Huayllayoc.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
