--- a/destinos-2.html
+++ b/destinos-2.html
@@ -124,13 +124,14 @@
 				<div class="col-md-3 wow bounceInUp">
 					<div class="thumb">
 						<div class="img">
+							<a href="destinos/D-Mandor">
 							<img src="img/mini-destinos/mandor/miniatura/miniaturas-de-destinos-Mandor.jpg" class="img-fluid" alt="mandor miniatura">
 						</div>
 						<div class="text">
-							<h4 class="price">treking</h4>
+							<h4 class="price">Ecoturismo</h4>
 							<a href="destinos/D-Mandor">
 								<h3 class="text-center py-2">Cataratas de Yanay</h3>
-								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
+								<p class="text-center">Dos cataras que se forman bajo el manto de una montaña con abundante fauna silvestre.</p>
 							</a>
 						</div>
 						<a href="img/mini-destinos/mandor/miniatura/miniaturas-de-destinos-Mandor.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
@@ -144,10 +145,10 @@
 							<img src="img/mini-destinos/Idma-esmeralda/miniatura/miniaturas-de-destinos-idma-esmeralda.jpg" class="img-fluid" alt="idma esmeralda">
 						</div>
 						<div class="text">
-							<!-- <h4 class="price">$400</h4> -->
+							<h4 class="price">Ecoturismo</h4>
 							<a href="destinos/D-IdmaE">
-								<h3 class="text-center py-2">Idma esmeralda</h3>
-								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
+								<h3 class="text-center py-2">IDMA Esmeralda</h3>
+								<p class="text-center">Un Excelente y magnifico lugar para apreciar los regalos de la naturaleza.</p>
 							</a>
 						</div>
 						<a href="img/mini-destinos/Idma-esmeralda/miniatura/miniaturas-de-destinos-idma-esmeralda.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
@@ -161,10 +162,10 @@
 							<img src="img/mini-destinos/Koribeni/miniatura/miniaturas-de-destinos-koribeni.jpg" class="img-fluid" alt="koribeni miniatura">
 						</div>
 						<div class="text">
-							<!-- <h4 class="price">$400</h4> -->
+							<h4 class="price">Vivencial</h4>
 							<a href="destinos/D-Koribeni">
-								<h3 class="text-center py-2">Alfamayo</h3>
-								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
+								<h3 class="text-center py-2">Koribeni</h3>
+								<p class="text-center">Un gran paisaje de vistas espectaculares y atardeceres hermosos donde se produce el mejor café.</p>
 							</a>
 						</div>
 						<a href="img/mini-destinos/Koribeni/miniatura/miniaturas-de-destinos-koribeni.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
@@ -178,10 +179,10 @@
 							<img src="img/mini-destinos/Madre-Selva/Miniatura/miniaturas-de-destinos-madre-selva.jpg" class="img-fluid" alt="madre selva miniatura">
 						</div>
 						<div class="text">
-							<!-- <h4 class="price">$400</h4> -->
+							<h4 class="price">Ecoturismo</h4>
 							<a href="destinos/D-MadreSelva">
 								<h3 class="text-center py-2">Madre Selva</h3>
-								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
+								<p class="text-center">Un paraíso lleno de afloraciones, con bellas vistas de montañas y riachuelos.</p>
 							</a>
 						</div>
 						<a href="img/mini-destinos/Madre-Selva/Miniatura/miniaturas-de-destinos-madre-selva.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
@@ -195,10 +196,10 @@
 							<img src="img/mini-destinos/Parques-Quillbamba/miniatura/miniaturas-de-destinos-PARQUE-QUILLABAMBA.jpg" class="img-fluid" alt="parques de Quillabamba-miniatura">
 						</div>
 						<div class="text">
-							<!-- <h4 class="price">$400</h4> -->
+							<h4 class="price">Vivencial</h4>
 							<a href="destinos/D-ParquesQuilla">
 								<h3 class="text-center py-2">Parques de Quillabamba</h3>
-								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
+								<p class="text-center">Te presentamos bellos parques para pasar momentos inolvidables en compañía de personas agradables.</p>
 							</a>
 						</div>
 						<a href="img/mini-destinos/Parques-Quillbamba/miniatura/miniaturas-de-destinos-PARQUE-QUILLABAMBA.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
@@ -212,10 +213,10 @@
 							<img src="img/mini-destinos/Pongo-de-Mainique/miniatura/miniaturas-de-destinos-pongo-de-mainique.jpg" class="img-fluid" alt="Pongo de Mainique miniatura">
 						</div>
 						<div class="text">
-							<!-- <h4 class="price">$400</h4> -->
+							<h4 class="price">Ecoturismo</h4>
 							<a href="destinos/D-PongoMainique">
 								<h3 class="text-center py-2">Pongo de Mainique</h3>
-								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
+								<p class="text-center">Un Cañón formado por la ruptura de la cordillera del Vilcabamba por donde recorre las agua del rio Urubamba.</p>
 							</a>
 						</div>
 						<a href="img/mini-destinos/Pongo-de-Mainique/miniatura/miniaturas-de-destinos-pongo-de-mainique.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
@@ -229,10 +230,10 @@
 							<img src="img/mini-destinos/Quillabamba/miniatura/miniaturas-de-destinos-Quillabamba.jpg" class="img-fluid" alt="Quillabamba miniatura">
 						</div>
 						<div class="text">
-							<!-- <h4 class="price">$400</h4> -->
+							<h4 class="price">Vivencial</h4>
 							<a href="destinos/D-Quillabamba">
 								<h3 class="text-center py-2">Quillabamba</h3>
-								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
+								<p class="text-center">Conocida como "La ciudad del Eterno verano" posee un agradable clima cálido durante todo el año.</p>
 							</a>
 						</div>
 						<a href="img/mini-destinos/Quillabamba/miniatura/miniaturas-de-destinos-Quillabamba.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
@@ -246,10 +247,10 @@
 							<img src="img/mini-destinos/Salkanta-desde-Chichima/miniatura/miniaturas-de-destinos-chichima.jpg" class="img-fluid" alt="Salkntay miniatura">
 						</div>
 						<div class="text">
-							<!-- <h4 class="price">$400</h4> -->
+							<h4 class="price">Aventura</h4>
 							<a href="destinos/D-SalkantydeChichima">
 								<h3 class="text-center py-2">Salkantay de Chichima</h3>
-								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
+								<p class="text-center">Maravillate con el atardecer más hermoso de nuestro nevadao del Apu Salkantay.</p>
 							</a>
 						</div>
 						<a href="img/mini-destinos/Salkanta-desde-Chichima/miniatura/miniaturas-de-destinos-chichima.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
@@ -263,10 +264,10 @@
 							<img src="img/mini-destinos/San-pedro/miniatura/miniaturas-de-destinos-san-pedro.jpg" class="img-fluid" alt="San Pedro miniatura">
 						</div>
 						<div class="text">
-							<!-- <h4 class="price">$400</h4> -->
+							<h4 class="price">Aventura</h4>
 							<a href="destinos/D-SanPedro">
 								<h3 class="text-center py-2">San Pedro</h3>
-								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
+								<p class="text-center">Bellos lugares y paisajes, un excelente clima para rodearse con la naturaleza.</p>
 							</a>
 						</div>
 						<a href="img/mini-destinos/San-pedro/miniatura/miniaturas-de-destinos-san-pedro.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
@@ -277,13 +278,14 @@
 				<div class="col-md-3 wow bounceInUp" data-wow-duration="3s" data-wow-dealy="6s">
 					<div class="thumb">
 						<div class="img">
+							<a href="destinos/D-Torontoypata.html">
 							<img src="img/mini-destinos/Torontoypata/miniatura/miniaturas-de-destinos-torontoypata.jpg" class="img-fluid" alt="torontoypata miniatura">
 						</div>
 						<div class="text">
-							<!-- <h4 class="price">$400</h4> -->
+							<h4 class="price">Ecoturismo</h4>
 							<a href="destinos/D-Torontoypata.html">
 								<h3 class="text-center py-2">Torontoypata</h3>
-								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
+								<p class="text-center">Un espectacular cañón en sus paredes se encuntran nidos de aves como Gallito de las rocas.</p>
 							</a>
 						</div>
 						<a href="img/mini-destinos/Torontoypata/miniatura/miniaturas-de-destinos-torontoypata.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
@@ -297,10 +299,10 @@
 							<img src="img/mini-destinos/Tunkimayo/miniatura/miniatura-tunquiamyo.jpg" class="img-fluid" alt="Tunquimayo miniatura">
 						</div>
 						<div class="text">
-							<!-- <h4 class="price">$400</h4> -->
+							<h4 class="price">Ecoturismo</h4>
 							<a href="destinos/D-Tunquimayo">
 								<h3 class="text-center py-2">Tunquimayo</h3>
-								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
+								<p class="text-center">Una bella Catarata formada gracias a la pendiente de una montaña.</p>
 							</a>
 						</div>
 						<a href="img/mini-destinos/Tunkimayo/miniatura/miniatura-tunquiamyo.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
@@ -314,10 +316,10 @@
 							<img src="img/mini-destinos/Urusayhua/miniatura/miniaturas-de-destinos-urusayhua.jpg" class="img-fluid" alt="Urusuayhua miniatura">
 						</div>
 						<div class="text">
-							<!-- <h4 class="price">$400</h4> -->
+							<h4 class="price">Ecoturismo</h4>
 							<a href="destinos/D-Urusayhua">
 								<h3 class="text-center py-2">Urusayhua</h3>
-								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
+								<p class="text-center">Una imponente montaña llena de misticismo y fuerza, llena de flora y fauna.</p>
 							</a>
 						</div>
 						<a href="img/mini-destinos/Urusayhua/miniatura/miniaturas-de-destinos-urusayhua.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
@@ -331,10 +333,10 @@
 							<img src="img/mini-destinos/Vuleta-al-Mundo/miniatura/miniaturas-de-destinos-vuelta-al-mundo.jpg" class="img-fluid" alt="Vuelta al Mundo miniatura">
 						</div>
 						<div class="text">
-							<!-- <h4 class="price">$400</h4> -->
+							<h4 class="price">Ecoturismo</h4>
 							<a href="destinos/D-VueltaMundo">
 								<h3 class="text-center py-2">Vuelta la mundo</h3>
-								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
+								<p class="text-center">Un bello paraje para disfrutar unos fimenes de semenas en compañia de amistades o familia.</p>
 							</a>
 						</div>
 						<a href="img/mini-destinos/Vuleta-al-Mundo/miniatura/miniaturas-de-destinos-vuelta-al-mundo.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
@@ -348,10 +350,10 @@
 							<img src="img/mini-destinos/Rio-Yoyato/miniatura/mini-yoyato.jpg" class="img-fluid" alt="Yoyato miniatura">
 						</div>
 						<div class="text">
-							<!-- <h4 class="price">$400</h4> -->
+							<h4 class="price">Ecoturismo</h4>
 							<a href="destinos/D-Yoyato">
 								<h3 class="text-center py-2">Yoyato</h3>
-								<p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, corrupti.</p>
+								<p class="text-center">Disfruta de las cálidas y cristalinas aguas de este hermoso rio.</p>
 							</a>
 						</div>
 						<a href="img/mini-destinos/Rio-Yoyato/miniatura/mini-yoyato.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
