--- a/destinos/D-7tinajas.html
+++ b/destinos/D-7tinajas.html
@@ -128,6 +128,8 @@
                     <h2 class="text-title">7 Tinajas</h2>
                     <h6 class="text-center p-location">
                         Echarati – La Convención
+                    </h6>
+                    <h6 class="text-center p-location">
                         900 m.s.n.m
                     </h6>
                     <p>
