--- a/destinos/D-CVillaRica.html
+++ b/destinos/D-CVillaRica.html
@@ -131,8 +131,15 @@
                         Santa Ana – La Convención
 						1500 a 2000 msnm
                     </h6>
+                    <h6 class="text-center p-location">
+                        1450 m.s.n.m.
+                    </h6>
                     <p>
-                        Se encuetra ubicado a 20 minutos aprox. Desde la ciudad de Quillabamba tomando la ruta Quillabamba – Huayllayoc – Villa rica . Se llega hasta el final de la carretera y de ahí se realiza una caminata de 10 min aprox. Hacia la catarata. En el camino se puede observar paisajes majestuosos formados por el rio y las grandes montañas que rodean este valle. 
+                        Se encuetra ubicado a 20 minutos aprox. en vehiculo desde la ciudad de Quillabamba tomando la ruta Quillabamba – Echarati para luego tomar la ruta de Villa Rica donde se recorre asta el final del tramo y de ahí se realiza una caminata de 10 min aprox. Hacia la catarata. Esta es una hermosa caída con 3 saltos, el último de ellos con una caída de aproximadamente 
+                        30 metros de altura, estas aguas tienen su origen en las cabeceras de montaña que rodean a la Ciudad de Quillabamba. La catarata tiene una poza de agua cristalina cuyas aguas con un promedio de temperatura de 22° C, son propicias para el disfrute, el entorno de la catarata es amplia y abierta con entrada de la luz solar .
+                    </p>   
+                    <p>
+                        Para acceder a ella pasamos por un bosque alto con presencia de árboles como el nogal así como también especies de aves como el Relojero de montaña. 
                     </p>
                     <div class=" mt-5">
                         <a href="../img/mapas/catarata Villa Rica.jpg" class="btn-popup map-gal">ver mapa</a>
