--- a/destinos/D-Huayllayoc.html
+++ b/destinos/D-Huayllayoc.html
@@ -130,8 +130,14 @@
                     <h6 class="text-center p-location">
                         Santa Ana – La Convención
                     </h6>
+                    <h6 class="text-center p-location">
+                        990 m.s.n.m. 
+                    </h6>
                     <p>
-                        Se encuentra ubicado a 40 minutos aprox. de la ciudad de Quillabamba en la ruta Quillabamba – Echarati .Al llegar a esta localidad se toma un camino que dura aprox 15 min.
+                        Se encuentra ubicado a 15 minutos aprox. en vehiculo desde la ciudad de Quillabamba en la ruta Quillabamba – Echarati. Al llegar a este sector se toma un camino que dura aprox. 15 min.
+                    </p>
+                    <p>
+                        Es una pequeña cascada con una altura de 5 metros con un caudal de agua considerable, las aguas discurren y caen por una pared rocosa siguiendo por una pequeña tinaja de roca. Para llegar a la misma cascada se realiza una caminata que atravieza hermosas zonas de cultivo.
                     </p>
                     <div class=" mt-5">
                         <a href="../img/mapas/huayllayoc mapa.jpg" class="btn-popup map-gal">ver mapa</a>
