--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<link rel="shortcut icon" href="img/logo/destinos.ico">
-	<meta name="description" content="Descubre Quillabamba - Cusco 'Ciudad del eterno Verano' vive Experiencias únicas de aventura, gastronomía y naturaleza.">
 	<title>Destinos Quillabamba, Cusco|Perú - Agencia de viajes y turismo</title>
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:700|Roboto:400,400i,500">
@@ -16,10 +15,33 @@
 	<link rel="stylesheet" href="css/component.css">
 	<link rel="stylesheet" href="css/icomoon.css">
 	<link rel="stylesheet" href="css/sal.css">
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/main.lite.css">
 	<link rel="stylesheet" href="css/scrollbar.css">
-</head>
 
+	<meta property="og:type" 				content="website"/>
+	<!-- Meta Description -->
+	<meta property="og:title" 				content="Destinos Quillabamba - Agencia de viajes y turismo"/>
+	<meta property="og:url" 				content="https://destinosquillabamba.com/index.html"/>
+	<meta property="og:image" content="https://destinosquillabamba.com/img/banner/imagenes-1/img3.jpg" />
+	<meta property="og:image:secure_url" content="https://destinosquillabamba.com/img/banner/imagenes-1/img3.jpg" />
+	<meta property="og:image:type" content="image/jpeg" />
+	<meta property="og:image:width" content="100%" />
+	<meta property="og:image:height" content="100%" />
+	<meta property="og:image:alt" content="un paisaje de cerros y rios" />
+	<meta property="fb:app_id" content="551758985233665" />
+	<meta property="og:description" content="Destinos Quillabamba te presenta unos lugares hermosos"> 
+	<meta name="description" content="Descubre Quillabamba - Cusco 'Ciudad del eterno Verano' vive Experiencias únicas de aventura, gastronomía y naturaleza.">
+    
+	<script type='application/ld+json'> 
+		{
+			"@type": "WebSite",
+			"name": "Destinos Quillabamba",
+			"alternateName": "DestinosQ",
+			"url": "https://destinosquillabamba.com"
+			"@context": "http://www.schema.org",
+		}
+	</script>
+</head>
 <body>
 
 <header>
@@ -210,51 +232,51 @@
 		</div>
 		<div class="row">
 			<div class="col-12 col-sm-12 col-md-4 col-lg-4 card-thumb" data-sal-duration="1200" data-sal="slide-up" data-sal-delay="400" data-sal-easing="ease-out-bounce">
-				<div class="Experience">
+				<div class="experience">
 					<div class="view overlay zoom rounded z-depth">
-						<img class="img-fluid" src="img/paquete-1.jpg" alt="">
+						<img class="img-fluid" src="img/paquete-1.jpg" alt="7 tinjas experiencia">
 						<a href="paquetes/experiencia-1">
 							<div class="mask rgba-white-slight"></div>
 						</a>
 					</div>
-						<a href="#!" class=" text-thumb">
-							<h6 class="font-weight-bold"><i class="fas fa-map pr-2"></i>Adventure</h6>
-							</a>
-						<h4 class="font-weight-bold"><strong>Tour 7 tinajas</strong></h4>
-							<p class="dark-grey-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, debitis?</p>
+					<div class="text-experience">
+						<h6 class="font-weight-bold"><i class="fas fa-map pr-2"></i>Adventura full day</h6>
+						<h4 class="font-weight-bold"><strong>7 tinajas</strong></h4>
+							<p class="dark-grey-text">Una maravillosa y asombrosa experiencia por Villa Rica, Sirenayoc y Siete Tinajas</p>
 						<a href="paquetes/experiencia-1" class="btn btn-rounded btn-md primary-btn">Leer más</a>
+					</div>
 				</div>
 			</div>
 			<div class="col-12 col-sm-12 col-md-4 col-lg-4 mt-xs-4 card-thumb" data-sal-duration="1200" data-sal="slide-up" data-sal-delay="500" data-sal-easing="ease-out-bounce">
-				<div class="Experience">
+				<div class="experience">
 					<div class="view overlay zoom rounded z-depth">
-						<img class="img-fluid" src="img/paquete-2.jpg" alt="">
+						<img class="img-fluid" src="img/paquete-2.jpg" alt="yanay mandor experincia">
 						<a href="paquetes/experiencia-2">
 							<div class="mask rgba-white-slight"></div>
 						</a>
 					</div>
-						<a href="#!" class=" text-thumb">
-							<h6 class="font-weight-bold"><i class="fas fa-map pr-2"></i>Adventure</h6>
-							</a>
-						<h4 class="font-weight-bold"><strong>Tour Chinche</strong></h4>
-							<p class="dark-grey-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, debitis?</p>
+					<div class="text-experience">
+						<h6 class="font-weight-bold"><i class="fas fa-map pr-2"></i>Adventura full day</h6>
+						<h4 class="font-weight-bold"><strong>Yanay - Mandor</strong></h4>
+							<p class="dark-grey-text">Una magestuosa experiencia por Chinche, Yanay y Madera Verde.</p>
 						<a href="paquetes/experiencia-2" class="btn btn-rounded btn-md primary-btn">Leer más</a>
+					</div>
 				</div>
 			</div>
 			<div class="col-12 col-sm-12 col-md-4 col-lg-4 card-thumb" data-sal-duration="1200" data-sal="slide-up" data-sal-delay="600" data-sal-easing="ease-out-bounce">
-				<div class="Experience">
+				<div class="experience">
 					<div class="view overlay zoom rounded z-depth">
-						<img class="img-fluid" src="img/paquete-3-city-tour.jpg" alt="">
+						<img class="img-fluid" src="img/paquete-3-city-tour.jpg" alt="quillabamba experiencia">
 						<a href="paquetes/experiencia-3">
 							<div class="mask rgba-white-slight"></div>
 						</a>
 					</div>
-						<a href="#!" class=" text-thumb">
-							<h6 class="font-weight-bold"><i class="fas fa-map pr-2"></i>Adventure</h6>
-							</a>
-						<h4 class="font-weight-bold"><strong>Tour Quillabamba</strong></h4>
-							<p class="dark-grey-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, debitis?</p>
+					<div class="text-experience">
+						<h6 class="font-weight-bold"><i class="fas fa-map pr-2"></i>Adventura full day</h6>
+						<h4 class="font-weight-bold"><strong>Quillabamba City</strong></h4>
+							<p class="dark-grey-text">Una grandiosa y alucinante experiencia por la ciudad de Quillabamba.</p>
 						<a href="paquetes/experiencia-3" class="btn btn-rounded btn-md primary-btn">Leer más</a>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -268,60 +290,56 @@
 		<div class="row align-items-center justify-content-center">
 			<div class="col-lg-5 offset-lg-1">
 				<div class="left-content">
-					<img class="img1 img-fluid" src="img/banner/imagenes-1/img3.jpg" alt="img-popular 1" data-sal-duration="1200" data-sal="zoom-in" data-sal-delay="300" data-sal-easing="ease-out-bounce">
-					<img class="img2 img-fluid" src="img/banner/imagenes-3/pajarito-340-x-420.jpg" alt="img- popular 2" data-sal-duration="1200" data-sal="slide-right" data-sal-delay="400" data-sal-easing="ease-out-bounce">
-					<img class="img3 img-fluid" src="img/banner/imagenes-2/img6.jpg" alt="img-popular 3" data-sal-duration="1200" data-sal="slide-left" data-sal-delay="420" data-sal-easing="ease-out-bounce">
+					<img class="img1 img-fluid" src="img/banner/imagenes-1/img3.jpg" alt="img Torontoypata" data-sal-duration="1200" data-sal="zoom-in" data-sal-delay="300" data-sal-easing="ease-out-bounce">
+					<img class="img2 img-fluid" src="img/banner/imagenes-3/pajarito-340-x-420.jpg" alt="img foto pajarito" data-sal-duration="1200" data-sal="slide-right" data-sal-delay="400" data-sal-easing="ease-out-bounce">
+					<img class="img3 img-fluid" src="img/banner/imagenes-2/img6.jpg" alt="img Illapani" data-sal-duration="1200" data-sal="slide-left" data-sal-delay="420" data-sal-easing="ease-out-bounce">
 				</div>
 			</div>
 			<div class="col-lg-5 offset-lg-1">
 				<div class="right-content">
 					<div class="main_title" data-sal-duration="1200" data-sal="slide-up" data-sal-delay="600" data-sal-easing="ease-out-bounce">
-						<h2 class="h1">Lugares <br>Populares</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
-							dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+						<h2 class="h1">"Descubre la Selva <br>oculta del Cusco"</h2>
+						<p>Quillabamba un mundo magico lleno de retos asombrosos con un clima fascinante y acogedor, te invita a ser parte de esta aventura descubriendo mas sobre "La Selva oculta del Cusco".</p>
 					</div>
 					<div class="counter_area">
 						<div class="top-two">
 							<!-- single counter -->
 							<div class="single_counter">
 								<div class="thumb">
-									<img src="img/banner/icon1.png" alt="">
+									<img src="img/banner/flower.png" alt="icon-flora">
 								</div>
 								<div class="info-content">
-									<h4>7 tinajas</h4>
+									<h4>Flora</h4>
 								</div>
 							</div>
 							<!-- single counter -->
 							<div class="single_counter">
 								<div class="thumb">
-									<img src="img/banner/icon2.png" alt="">
+									<img src="img/banner/002-china.png" alt="iconfauna">
 								</div>
 								<div class="info-content">
-									<h4>7 tinajas</h4>
+									<h4>Fauna</h4>
 								</div>
 							</div>
 						</div>
-
-						<div class="bottom-two">
-							<!-- single counter -->
+						<!-- <div class="bottom-two">
 							<div class="single_counter">
 								<div class="thumb">
 									<img src="img/banner/icon3.png" alt="">
 								</div>
 								<div class="info-content">
-									<h4>7 tinajas</h4>
+									<h4>Tradicion</h4>
 								</div>
 							</div>
-							<!-- single counter -->
 							<div class="single_counter">
 								<div class="thumb">
 									<img src="img/banner/icon4.png" alt="">
 								</div>
 								<div class="info-content">
-									<h4>7 tinajas</h4>
+									<h4>Clima</h4>
 								</div>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
@@ -411,7 +429,7 @@
 	<div class="container">
 		<div class="row justify-content-center mb-5">
 			<div class="col-md-7 text-center title_blog" data-sal-duration="1200" data-sal="slide-down" data-sal-delay="300" data-sal-easing="ease-out-bounce">
-				<h2 class="font-weight-light text-black py-2">Nuestro Blog</h2>
+				<h2 class="font-weight-light text-black py-2">Nuestros Blogs</h2>
 				<p class="color-black-opacity-5">Un espacio de información valiosa para conocer <br> más acerca de nosotros</p>
 			</div>
 		</div>
@@ -544,7 +562,7 @@
 </div>
 <!-- End modal -->
 <!-- Start banner icon -->
-<section class="bg-footer overlay"  style="background-image: url(img/hero_bg_1.jpg);">
+<section class="bg-footer overlay"  style="background-image: url(img/hero_bg_1.jpg); background-attachment: fixed;">
 	<div class="container">
 		<div class="row row_contact">
 			<div class="col-6 col-sm-6 col-lg-4 footer_contact d-flex flex-column align-items-center justify-content-start text-center">
@@ -643,7 +661,7 @@
 </footer>
 <!-- end footer -->
 
-	<!-- SCRIPTS -->
+<!-- SCRIPTS -->
 <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
 <script type="text/javascript" src="js/popper.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
@@ -653,11 +671,6 @@
 <script type="text/javascript" src="js/sal.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 <script type="text/javascript" src="js/new.js"></script>
-<script>
-	$('.carousel').carousel({
-		interval: 2000
-	})
-</script>
 </body>
 
 </html>
